# aircombat

./: .gitignore  README.md  docker-compose.yml  main.py  make_agent.ipynb  pyproject.toml  requirements.txt
dockerfiles/: Dockerfile.macos
results/0/: log_0.json  log_2.json  validation_results.json
simulator/: CMakeLists.txt  MANIFEST.in.fragment  builder.sh  install_all.py
simulator/ASRCAISim1/share/cmake/: ASRCAISim1Config.cmake
simulator/core_plugins/Supervised/: CMakeLists.txt
simulator/include/: Agent.h  Asset.h  Callback.h  Entity.h  Fighter.h  Missile.h  PhysicalAsset.h  Propulsion.h  PythonableBase.h  SerializableAsReference.h  SerializableAsValue.h  SimulationManager.h  stl_bind.h
simulator/include/crs/: DerivedCRS.h  GeodeticCRS.h
simulator/include/traits/: forwarder.h
simulator/include/util/: dependency_graph.h
simulator/include/util/serialization/: NLJSONArchive.h  eigen.h  internal_state_serializer.h  numpy.h  pyobject.h
simulator/sample/modules/cpp_template/: CMakeLists.txt  builder.sh
simulator/src/: Factory.cpp  Main.cpp  SixDoFFighter.cpp
simulator/user_plugins/BasicAirToAirCombatModels01/src/: BasicAACRuleBasedAgent01.cpp
simulator/user_plugins/R7ContestModels/: CMakeLists.txt
tutorial/: MyReward.py  sample_config.yaml  tutorial.ipynb  validate.py
tutorial/Test/: MyAgent.py  __init__.py  agent_config.json  model_config.yaml
tutorial/configs/: R7_contest_learning_config_M.json
tutorial/handyrl/: ReplayBuffer.py  batcher.py  environment.py  generation.py  model.py  train.py  worker.py
(+13 files in other folders)
